[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output formatting
addopts = [
    "-v",                    # verbose output
    "--tb=short",           # shorter traceback format
    "--strict-markers",     # require markers to be defined
    "--disable-warnings",   # disable warnings in output
    "-ra",                  # show extra test summary info for all except passed
    "--cache-clear",        # don't create .pytest_cache directories
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "W", "F", "I"]
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.format]
quote-style = "double"
